<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="click"
            type="cn.imppp.knowlege.ui.fragment.MineFragment.ClickProxy" />

    </data>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FAFAFC">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@drawable/shape_mine_bg" />

        <com.meetsl.scardview.SCardView
            android:id="@+id/rlCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="75dp"
            android:layout_marginEnd="20dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="3dp"
            app:cardLightDirection="LT"
            app:cardShadowEndColor="#ffffff"
            app:cardShadowStartColor="#1F0079E2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@drawable/shape_white_card"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/title1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:paddingStart="20dp"
                    android:paddingTop="10dp"
                    android:paddingEnd="20dp"
                    android:paddingBottom="10dp">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/icon_touxiang" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/app_name"
                            android:textColor="@color/black"
                            android:textSize="@dimen/normal_size" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/app_des"
                            android:textColor="@color/black"
                            android:textSize="@dimen/small_size" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="30dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/remember_log"
                        android:textColor="@color/black"
                        android:textSize="@dimen/small_size" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/solution_log"
                        android:textColor="@color/black"
                        android:textSize="@dimen/small_size" />

                </LinearLayout>

            </LinearLayout>

        </com.meetsl.scardview.SCardView>

        <!--        设置中心-->
        <com.meetsl.scardview.SCardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/rlCard"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="3dp"
            app:cardLightDirection="LT"
            app:cardShadowEndColor="#ffffff"
            app:cardShadowStartColor="#1F0079E2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_white_card"
                android:orientation="vertical"
                android:paddingStart="20dp"
                android:paddingEnd="20dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="@{()->click.collect()}">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:gravity="center"
                        android:text="@string/save_centry"
                        android:textColor="@color/black"
                        android:textSize="@dimen/small_size" />

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_alignParentEnd="true"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="15dp"
                        android:src="@drawable/icon_right" />

                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.1dp"
                    android:background="#EFF1F3" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="@{()->click.business()}">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:gravity="center"
                        android:text="@string/call_me"
                        android:textColor="@color/black"
                        android:textSize="@dimen/small_size" />

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_alignParentEnd="true"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="15dp"
                        android:src="@drawable/icon_right" />

                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.1dp"
                    android:background="#EFF1F3" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="@{()->click.clear()}">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:gravity="center"
                        android:text="@string/clear_cache"
                        android:textColor="@color/black"
                        android:textSize="@dimen/small_size" />

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_alignParentEnd="true"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="15dp"
                        android:src="@drawable/icon_right" />

                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.1dp"
                    android:background="#EFF1F3" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="@{()->click.about()}">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:gravity="center"
                        android:text="@string/about"
                        android:textColor="@color/black"
                        android:textSize="@dimen/small_size" />

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_alignParentEnd="true"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="15dp"
                        android:src="@drawable/icon_right" />

                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.1dp"
                    android:background="#EFF1F3" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:gravity="center"
                        android:text="@string/version"
                        android:textColor="@color/black"
                        android:textSize="@dimen/small_size" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="30dp"
                        android:gravity="center"
                        android:text="@string/version_code"
                        android:textColor="@color/black"
                        android:textSize="@dimen/small_size" />

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_alignParentEnd="true"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="15dp"
                        android:src="@drawable/icon_right" />

                </RelativeLayout>

            </LinearLayout>

        </com.meetsl.scardview.SCardView>

    </RelativeLayout>
</layout>